--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -42,6 +42,10 @@ html[dir="ltr"] {
   &.scrolled {
     box-shadow: 0px 0px 10px rgba($color: #189332, $alpha: .4);
     padding: 5px 0px;
+
+    .navbar-contain {
+      top: 49px !important;
+    }
   }
 
   .content {
