--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1593,6 +1593,47 @@ header .image-content img {
      object-position: center;
 }
 
+.sub-header {
+  width: 100%;
+  padding: 140px 0px 50px;
+  background-color: #171717;
+}
+
+.sub-header h1 {
+  font-size: 20px;
+  color: #fff;
+  text-align: center;
+  margin: 0px;
+  font-weight: 900;
+  text-transform: capitalize;
+}
+
+.help-contain {
+  width: 100%;
+  padding: 40px 0px;
+}
+
+.help-contain .heading {
+  width: 100%;
+  text-align: center;
+}
+
+.help-contain .heading h1 {
+  font-size: 20px;
+  color: #1B984B;
+  text-align: center;
+  margin-bottom: 25px;
+  font-weight: 900;
+  text-transform: capitalize;
+}
+
+.help-contain p {
+  color: #606060;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.2rem;
+}
+
 .order {
   width: 100%;
   padding-bottom: 20px;
