--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2354,6 +2354,40 @@ footer .contain .email:hover span {
   color: #189332;
 }
 
+.modal-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.modal-body img {
+  width: 120px;
+  height: 120px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin: 0px auto 40px;
+}
+
+.modal-body .head {
+  width: 100%;
+  text-align: center;
+  color: #171717;
+  font-size: 25px;
+  font-weight: 900;
+}
+
 .from-contain {
   width: 100%;
 }
